Add Listview to the demo

--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -63,8 +63,10 @@ CheckBox{
     horizontal-align: left;
     margin-bottom: 10;
     width: 100%;
+    background-color: transparent;
 }
 
 .title{
 
 }
+
