--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -6,8 +6,8 @@ Page {
 }
 
 ActionBar {
-  background-color: #363b58;
-  color: #fff;
+  background-color: #fff;
+  color: #3f3f3f;
 }
 
 .tab-item {
